server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__lead_tool_names.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "ci_job_log",
  "github_search",
  "output_view",
  "output_grep",
  "task_create",
  "task_update",
  "task_blocked_list",
  "epic_show",
  "epic_update",
  "epic_tasks",
  "epic_close",
  "task_delete_branch",
  "task_archive_activity",
  "task_reset_counters",
  "task_kill_session",
  "submit_decision"
]
