server/crates/djinn-mcp-extension/src/tests/snapshots/djinn_mcp_extension__tests__schema_tests__reviewer_tool_names.snap
---
source: crates/djinn-mcp-extension/src/tests/schema_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "ci_job_log",
  "github_search",
  "output_view",
  "output_grep",
  "memory_build_context",
  "submit_review"
]
